--- a/misc/my_goland_template/templates/Go.xml
+++ b/misc/my_goland_template/templates/Go.xml
@@ -182,7 +182,7 @@
       <option name="GO_TYPE" value="false" />
     </context>
   </template>
-  <template name="check" value="$VAR0$ &gt;= 0 &amp;&amp; $VAR0$ &lt; $VAR1$ &amp;&amp; $VAR2$ &gt;= 0 &amp;&amp; $VAR2$ &lt; $VAR3$" description="检查坐标是否在矩形区域内" toReformat="true" toShortenFQNames="true">
+  <template name="check" value="0 &lt;= $VAR0$ &amp;&amp; $VAR0$ &lt; $VAR1$ &amp;&amp; 0 &lt;= $VAR2$ &amp;&amp; $VAR2$ &lt; $VAR3$" description="检查坐标是否在矩形区域内" toReformat="true" toShortenFQNames="true">
     <variable name="VAR0" expression="complete()" defaultValue="&quot;x&quot;" alwaysStopAt="true" />
     <variable name="VAR1" expression="complete()" defaultValue="&quot;n&quot;" alwaysStopAt="true" />
     <variable name="VAR2" expression="complete()" defaultValue="&quot;y&quot;" alwaysStopAt="true" />
@@ -319,13 +319,13 @@
     </context>
   </template>
   <template name="reverse" value="reverse := func(a []$TYPE$) []$TYPE$ {&#10;&#9;n := len(a)&#10;&#9;r := make([]$TYPE$, n)&#10;&#9;for i, v := range a {&#10;&#9;&#9;r[n-1-i] = v&#10;&#9;}&#10;&#9;return r&#10;}" description="reverse slice" toReformat="true" toShortenFQNames="true">
-    <variable name="TYPE" expression="" defaultValue="&quot;byte&quot;" alwaysStopAt="true" />
+    <variable name="TYPE" expression="complete()" defaultValue="&quot;byte&quot;" alwaysStopAt="true" />
     <context>
       <option name="GO_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="equal" value="equals := func(a, b []$TYPE$) bool {&#10;&#9;// assert len(a) == len(b)&#10;&#9;for i, v := range a {&#10;&#9;&#9;if v != b[i] {&#10;&#9;&#9;&#9;return false&#10;&#9;&#9;}&#10;&#9;}&#10;&#9;return true&#10;}" description="两个 slice 是否相同" toReformat="true" toShortenFQNames="true">
-    <variable name="TYPE" expression="" defaultValue="&quot;int&quot;" alwaysStopAt="true" />
+  <template name="equal" value="equal := func(a, b []$TYPE$) bool {&#10;&#9;if len(a) != len(b) {&#10;&#9;&#9;return false&#10;&#9;}&#10;&#9;//sort.Ints(a)&#10;&#9;//sort.Ints(b)&#10;&#9;for i, v := range a {&#10;&#9;&#9;if v != b[i] {&#10;&#9;&#9;&#9;return false&#10;&#9;&#9;}&#10;&#9;}&#10;&#9;return true&#10;}" description="两个 slice 是否相同" toReformat="true" toShortenFQNames="true">
+    <variable name="TYPE" expression="complete()" defaultValue="&quot;int&quot;" alwaysStopAt="true" />
     <context>
       <option name="GO_STATEMENT" value="true" />
     </context>
@@ -485,7 +485,7 @@
       <option name="GO_FILE" value="true" />
     </context>
   </template>
-  <template name="dir4for" value="for _, d := range dir4 {&#10;&#9;if xx, yy := $X$+d.x, $Y$+d.y; xx &gt;= 0 &amp;&amp; xx &lt; n &amp;&amp; yy &gt;= 0 &amp;&amp; yy &lt; m &amp;&amp; !vis[xx][yy] {&#10;&#9;    vis[xx][yy] = true&#10;&#9;&#9;q = append(q, pair{xx, yy})&#10;&#9;}&#10;}" description="for _, d := range dir4 {" toReformat="true" toShortenFQNames="true">
+  <template name="dir4for" value="for _, d := range dir4 {&#10;&#9;if xx, yy := $X$+d.x, $Y$+d.y; 0 &lt;= xx &amp;&amp; xx &lt; n &amp;&amp; 0 &lt;= yy &amp;&amp; yy &lt; m &amp;&amp; !vis[xx][yy] {&#10;&#9;    vis[xx][yy] = true&#10;&#9;&#9;q = append(q, pair{xx, yy})&#10;&#9;}&#10;}" description="for _, d := range dir4 {" toReformat="true" toShortenFQNames="true">
     <variable name="X" expression="complete()" defaultValue="&quot;x&quot;" alwaysStopAt="true" />
     <variable name="Y" expression="complete()" defaultValue="&quot;y&quot;" alwaysStopAt="true" />
     <context>
@@ -546,12 +546,6 @@
       <option name="GO_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="fpt" value="Fprint(out, $VAR0$, &quot; &quot;)" description="Fprint(out, $VAR0$, &quot; &quot;)" toReformat="true" toShortenFQNames="true">
-    <variable name="VAR0" expression="complete()" defaultValue="&quot;&quot;" alwaysStopAt="true" />
-    <context>
-      <option name="GO_STATEMENT" value="true" />
-    </context>
-  </template>
   <template name="in" value="$VAR0$ &lt;= $VAR1$ &amp;&amp; $VAR1$ &lt;= $VAR2$" description="$VAR0$ &lt;= $VAR1$ &amp;&amp; $VAR1$ &lt;= $VAR2$" toReformat="true" toShortenFQNames="true">
     <variable name="VAR0" expression="complete()" defaultValue="&quot;x1&quot;" alwaysStopAt="true" />
     <variable name="VAR1" expression="complete()" defaultValue="&quot;x&quot;" alwaysStopAt="true" />
@@ -600,8 +594,7 @@
       <option name="GO_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="mk" value="$NAME$ := make([]int, $SIZE$)" description="$NAME$ := make([]int, $SIZE$)" toReformat="true" toShortenFQNames="true">
-    <variable name="NAME" expression="" defaultValue="&quot;a&quot;" alwaysStopAt="true" />
+  <template name="mk" value="make([]int, $SIZE$)" description="$NAME$ := make([]int, $SIZE$)" toReformat="true" toShortenFQNames="true">
     <variable name="SIZE" expression="complete()" defaultValue="&quot;n&quot;" alwaysStopAt="true" />
     <context>
       <option name="GO_EXPRESSION" value="true" />
@@ -668,8 +661,8 @@
     </context>
   </template>
   <template name="ifswap" value="if $VAR0$ &gt; $VAR1$ {&#10;    $VAR0$, $VAR1$ = $VAR1$, $VAR0$&#10;}" description="if $VAR0$ &gt; $VAR1$: $VAR0$, $VAR1$ = $VAR1$, $VAR0$" toReformat="true" toShortenFQNames="true">
-    <variable name="VAR0" expression="complete()" defaultValue="&quot;a&quot;" alwaysStopAt="true" />
-    <variable name="VAR1" expression="complete()" defaultValue="&quot;b&quot;" alwaysStopAt="true" />
+    <variable name="VAR0" expression="complete()" defaultValue="&quot;x&quot;" alwaysStopAt="true" />
+    <variable name="VAR1" expression="complete()" defaultValue="&quot;y&quot;" alwaysStopAt="true" />
     <context>
       <option name="GO_EXPRESSION" value="true" />
       <option name="GO_STATEMENT" value="true" />
@@ -713,9 +706,9 @@
       <option name="GO_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="comb" value="const mod $TYPE$ = 1e9 + 7&#10;const mx int = $MX_VAL$&#10;F := [mx + 1]$TYPE${1}&#10;for i := 1; i &lt;= mx; i++ {&#10;&#9;F[i] = F[i-1] * $TYPE$(i) % mod&#10;}&#10;pow := func(x, n $TYPE$) $TYPE$ {&#10;&#9;//x %= mod&#10;&#9;res := $TYPE$(1)&#10;&#9;for ; n &gt; 0; n &gt;&gt;= 1 {&#10;&#9;&#9;if n&amp;1 == 1 {&#10;&#9;&#9;&#9;res = res * x % mod&#10;&#9;&#9;}&#10;&#9;&#9;x = x * x % mod&#10;&#9;}&#10;&#9;return res&#10;}&#10;invF := [...]$TYPE${mx: pow(F[mx], mod-2)}&#10;for i := mx; i &gt; 0; i-- {&#10;&#9;invF[i-1] = invF[i] * $TYPE$(i) % mod&#10;}&#10;C := func(n, k $TYPE$) $TYPE$ { return F[n] * invF[k] % mod * invF[n-k] % mod }" description="初始化组合数" toReformat="true" toShortenFQNames="true">
+  <template name="comb" value="const mod $TYPE$ = 1e9 + 7&#10;const mx int = $MX_VAL$&#10;F := [mx + 1]$TYPE${1}&#10;for i := 1; i &lt;= mx; i++ {&#10;&#9;F[i] = F[i-1] * $TYPE$(i) % mod&#10;}&#10;pow := func(x, n $TYPE$) $TYPE$ {&#10;&#9;//x %= mod&#10;&#9;res := $TYPE$(1)&#10;&#9;for ; n &gt; 0; n &gt;&gt;= 1 {&#10;&#9;&#9;if n&amp;1 == 1 {&#10;&#9;&#9;&#9;res = res * x % mod&#10;&#9;&#9;}&#10;&#9;&#9;x = x * x % mod&#10;&#9;}&#10;&#9;return res&#10;}&#10;invF := [...]$TYPE${mx: pow(F[mx], mod-2)}&#10;for i := mx; i &gt; 0; i-- {&#10;&#9;invF[i-1] = invF[i] * $TYPE$(i) % mod&#10;}&#10;C := func(n, k int) $TYPE$ { return F[n] * invF[k] % mod * invF[n-k] % mod }" description="初始化组合数" toReformat="true" toShortenFQNames="true">
     <variable name="TYPE" expression="complete()" defaultValue="&quot;int64&quot;" alwaysStopAt="true" />
-    <variable name="MX_VAL" expression="" defaultValue="&quot;3e5&quot;" alwaysStopAt="true" />
+    <variable name="MX_VAL" expression="" defaultValue="&quot;1e6&quot;" alwaysStopAt="true" />
     <context>
       <option name="GO_STATEMENT" value="true" />
     </context>
@@ -807,12 +800,6 @@
       <option name="GO_STATEMENT" value="true" />
     </context>
   </template>
-  <template name="fpw" value="Fprint(_w, $VAR0$)" description="Fprint(_w, $VAR0$)" toReformat="true" toShortenFQNames="true">
-    <variable name="VAR0" expression="complete()" defaultValue="&quot;&quot;" alwaysStopAt="true" />
-    <context>
-      <option name="GO_STATEMENT" value="true" />
-    </context>
-  </template>
   <template name="mins" value="min := func(a ...$TYPE$) $TYPE$ {&#10;&#9;res := a[0]&#10;&#9;for _, v := range a[1:] {&#10;&#9;&#9;if v &lt; res {&#10;&#9;&#9;&#9;res = v&#10;&#9;&#9;}&#10;&#9;}&#10;&#9;return res&#10;}" description="min := func(a ...int) int {" toReformat="true" toShortenFQNames="true">
     <variable name="TYPE" expression="complete()" defaultValue="&quot;int&quot;" alwaysStopAt="true" />
     <context>
@@ -831,6 +818,23 @@
     </context>
   </template>
   <template name="&lt;abbreviation&gt;" value="defer func() { $END$ }()" description="defer func() {  }()" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="GO_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="reverseself" value="reverseSelf := func(a []$TYPE$) {&#10;&#9;for i, j := 0, len(a)-1; i &lt; j; i++ {&#10;&#9;&#9;a[i], a[j] = a[j], a[i]&#10;&#9;&#9;j--&#10;&#9;}&#10;}" description="reverse slice in place" toReformat="true" toShortenFQNames="true">
+    <variable name="TYPE" expression="complete()" defaultValue="&quot;byte&quot;" alwaysStopAt="true" />
+    <context>
+      <option name="GO_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="fpt" value="Fprint(out, $VAR0$)" description="Fprintln(out, $VAR0$)" toReformat="true" toShortenFQNames="true">
+    <variable name="VAR0" expression="complete()" defaultValue="&quot;&quot;" alwaysStopAt="true" />
+    <context>
+      <option name="GO_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="assert" value="if $END$ {&#10;    panic(9)&#10;}" description="if panic" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="GO_STATEMENT" value="true" />
     </context>
